syntax = "proto3";

package api.login.v1;

option go_package = "base/api/login/v1;v1";
import "google/api/annotations.proto";

service Login {
	rpc Register (RegisterReq) returns (RegisterReply) {
		option (google.api.http) = {
			post: "/v1/register"
			body: "*"
		};
	}

	rpc Login (LoginReq) returns (LoginReply) {
		option (google.api.http) = {
			post: "/v1/login"
			body: "*"
		};
	}

	rpc Logout (LogoutReq) returns (LogoutReply) {
		option (google.api.http) = {
			post: "/v1/logout"
			body: "*"
		};
	}
}

message RegisterReq {
	string phone = 1;
	string username = 2;
	string password = 3;
}

message RegisterReply {
	int64 id = 1;
}


message LoginReq {
	string phone = 1;
	string password = 2;
}

message LoginReply {
	string token = 1;
}

message LogoutReq {

}

message LogoutReply {

}
